gitea/overlays/jern.me/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
spec:
  template:
    spec:
      containers:
      - name: gitea
        ports:
          - name: http
            containerPort: 3000
          - name: ssh
            containerPort: 2222
            hostPort: 2222
        resources:
          requests:
            cpu: 50m
            memory: 250Mi
