gitea/overlays/jern.me/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - secretName: gitea-cert
      hosts:
        - gitea.jern.me
  rules:
    - host: gitea.jern.me
      http:
        paths:
          - backend:
              service:
                name: gitea
                port:
                  name: http
            path: /
            pathType: Prefix
